@@ -29,20 +29,18 @@ import eu.tailoringexpert.domain.ScreeningSheetParameter;
 import eu.tailoringexpert.domain.SelectionVector;
 import lombok.NonNull;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.log4j.Log4j2;
 
 import java.io.ByteArrayInputStream;
 import java.util.Collection;
 import java.util.LinkedList;
 import java.util.List;
-import java.util.Locale;
 import java.util.Objects;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 import static java.util.Comparator.comparing;
 import static java.util.function.Predicate.not;
 import static java.util.stream.Collectors.toCollection;
-import static java.util.stream.Collectors.toList;
 import static java.util.stream.Collectors.toUnmodifiableSet;
 
 /**
@@ -50,6 +48,7 @@ import static java.util.stream.Collectors.toUnmodifiableSet;
  *
  * @author Michael Bädorf
  */
+@Log4j2
 @RequiredArgsConstructor
 public class ScreeningSheetServiceImpl implements ScreeningSheetService {
 
@@ -70,10 +69,12 @@ public class ScreeningSheetServiceImpl implements ScreeningSheetService {
      */
     @Override
     public SelectionVector calculateSelectionVector(@NonNull byte[] rawData) {
+        log.traceEntry();
+
         Collection<ScreeningSheetParameterField> screeningSheetParameters = screeningSheetParameterProvider.parse(new ByteArrayInputStream(rawData));
         Collection<Parameter> parameters = getParameter(screeningSheetParameters);
 
-        return selectionVectorProvider.apply(parameters);
+        return log.traceExit(selectionVectorProvider.apply(parameters));
     }
 
     /**
@@ -81,6 +82,8 @@ public class ScreeningSheetServiceImpl implements ScreeningSheetService {
      */
     @Override
     public ScreeningSheet createScreeningSheet(@NonNull byte[] rawData) {
+        log.traceEntry();
+
         Collection<ScreeningSheetParameterField> screeningSheetParameters = screeningSheetParameterProvider.parse(new ByteArrayInputStream(rawData));
 
         String project = screeningSheetParameters.stream()
@@ -91,14 +94,6 @@ public class ScreeningSheetServiceImpl implements ScreeningSheetService {
             .filter(not(String::isEmpty))
             .orElseThrow(() -> new TailoringexpertException("Screeningsheet doesn't contain a project name!"));
 
-        Collection<Parameter> parameters = getParameter(screeningSheetParameters);
-
-        List<ScreeningSheetParameter> screeningSheetParameter = parameters
-            .stream()
-            .map(mapper::createScreeningSheet)
-            .collect(toList());
-
-        // phasen konvertieren und an liste hinzufügen
         List<Phase> phases = screeningSheetParameters
             .stream()
             .filter(entry -> ScreeningSheet.PARAMETER_PHASE.equalsIgnoreCase(entry.getCategory()))
@@ -106,30 +101,37 @@ public class ScreeningSheetServiceImpl implements ScreeningSheetService {
             .filter(Objects::nonNull)
             .sorted(comparing(Phase::ordinal))
             .collect(toCollection(LinkedList::new));
-        if (!phases.isEmpty()) {
-            screeningSheetParameter.add(ScreeningSheetParameter.builder()
-                .category(ScreeningSheet.PARAMETER_PHASE.substring(0, 1).toUpperCase(Locale.ROOT) + ScreeningSheet.PARAMETER_PHASE.substring(1))
-                .value(phases)
-                .build());
-        }
+
+        Collection<Parameter> parameters = getParameter(screeningSheetParameters);
+        List<ScreeningSheetParameter> screeningSheetParameter = parameters
+            .stream()
+            .map(mapper::createScreeningSheet)
+            .collect(toCollection(LinkedList::new));
 
         List<String> parameterConfigurationWithoutValues = parameters
             .stream()
             .map(Parameter::getName)
-            .collect(Collectors.toUnmodifiableList());
-
+            .toList();
 
         // all parameter not defined in db, which have no effect on calculating a selectionvector
         screeningSheetParameter.addAll(screeningSheetParameters
             .stream()
-            .filter(entry -> !ScreeningSheet.PARAMETER_PHASE.equalsIgnoreCase(entry.getCategory()) && !parameterConfigurationWithoutValues.contains(entry.getName()))
+            .filter(entry -> !parameterConfigurationWithoutValues.contains(entry.getName()))
             .map(entry -> ScreeningSheetParameter.builder()
-                .category(entry.getName().substring(0, 1).toUpperCase(Locale.GERMANY) + entry.getName().substring(1))
+                .category(entry.getCategory())
+                .name(entry.getName())
                 .value(entry.getLabel())
                 .build())
-            .collect(toList()));
+            .toList());
 
         SelectionVector selectionVector = selectionVectorProvider.apply(parameters);
+
+        log.traceExit(ScreeningSheet.builder()
+            .project(project)
+            .phases(phases)
+            .parameters(screeningSheetParameter)
+            .selectionVector(selectionVector)
+            .build());
 
         return ScreeningSheet.builder()
             .project(project)
