@@ -25,6 +25,7 @@ import eu.tailoringexpert.domain.PathContext;
 import eu.tailoringexpert.domain.PathContext.PathContextBuilder;
 import eu.tailoringexpert.domain.ProjectInformation;
 import eu.tailoringexpert.domain.ProjectResource;
+import eu.tailoringexpert.domain.ProjectState;
 import eu.tailoringexpert.domain.ResourceMapper;
 import eu.tailoringexpert.domain.ScreeningSheetResource;
 import eu.tailoringexpert.domain.SelectionVectorResource;
@@ -49,6 +50,7 @@ import org.springframework.web.bind.annotation.DeleteMapping;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.PutMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestPart;
 import org.springframework.web.bind.annotation.ResponseBody;
@@ -66,15 +68,17 @@ import static eu.tailoringexpert.domain.ResourceMapper.PROJECT_NEW;
 import static eu.tailoringexpert.domain.ResourceMapper.PROJECT_SCREENINGSHEET;
 import static eu.tailoringexpert.domain.ResourceMapper.PROJECT_SCREENINGSHEET_PDF;
 import static eu.tailoringexpert.domain.ResourceMapper.PROJECT_SELECTIONVECTOR;
+import static eu.tailoringexpert.domain.ResourceMapper.PROJECT_STATE;
 import static eu.tailoringexpert.domain.ResourceMapper.TAILORING;
 import static eu.tailoringexpert.domain.ResourceMapper.TAILORINGS;
-import static java.util.stream.Collectors.toList;
+import static org.springframework.hateoas.EntityModel.of;
 import static org.springframework.hateoas.server.mvc.BasicLinkBuilder.linkToCurrentMapping;
 import static org.springframework.http.HttpHeaders.ACCESS_CONTROL_EXPOSE_HEADERS;
 import static org.springframework.http.HttpHeaders.CONTENT_DISPOSITION;
 import static org.springframework.http.HttpStatus.BAD_REQUEST;
 import static org.springframework.http.HttpStatus.NO_CONTENT;
 import static org.springframework.http.ResponseEntity.notFound;
+import static org.springframework.http.ResponseEntity.ok;
 
 /**
  * REST-Controller for management of projects.
@@ -104,13 +108,17 @@ public class ProjectController {
     })
     @GetMapping(value = PROJECTS, produces = {"application/hal+json"})
     public ResponseEntity<CollectionModel<EntityModel<ProjectResource>>> getProjects() {
+        log.traceEntry();
+
         List<EntityModel<ProjectResource>> projekte = projectServiceRepository.getProjectInformations()
             .stream()
-            .map(domain -> EntityModel.of(mapper.toResource(PathContext.builder(), domain)))
-            .collect(toList());
-        return ResponseEntity
-            .ok()
+            .map(domain -> of(mapper.toResource(PathContext.builder(), domain)))
+            .toList();
+        ResponseEntity<CollectionModel<EntityModel<ProjectResource>>> result = ok()
             .body(CollectionModel.of(projekte));
+
+        log.traceExit();
+        return result;
 
     }
 
@@ -124,11 +132,16 @@ public class ProjectController {
     public ResponseEntity<Void> postProject(
         @Parameter(description = "Base catalog for project creation") @PathVariable String version,
         @Parameter(description = "New project configuration data") @RequestBody ProjectCreationRequest request) {
-        CreateProjectTO project = projectService.createProject(version, request.getScreeningSheet().getData(), request.getSelectionVector(), request.getNote());
+        log.traceEntry();
 
-        return ResponseEntity
+        CreateProjectTO project = projectService.createProject(version, request.getScreeningSheet().getData(), request.getSelectionVector(), request.getNote());
+        ResponseEntity<Void> result = ResponseEntity
             .created(mapper.createLink(ResourceMapper.REL_SELF, linkToCurrentMapping().toString(), PROJECT, Map.of("project", project.getProject())).toUri())
             .build();
+
+        log.traceExit();
+        return result;
+
     }
 
     @Operation(summary = "Load requested project")
@@ -142,14 +155,17 @@ public class ProjectController {
     @GetMapping(value = PROJECT, produces = {"application/hal+json"})
     public ResponseEntity<EntityModel<ProjectResource>> getProject(
         @Parameter(description = "Project identifier") @PathVariable String project) {
+        log.traceEntry();
 
         PathContextBuilder pathContextBuilder = PathContext.builder();
-        Optional<ProjectInformation> result = projectServiceRepository.getProjectInformation(project);
+        Optional<ProjectInformation> projectInformation = projectServiceRepository.getProjectInformation(project);
 
-        return result.map(pi -> ResponseEntity
-                .ok()
-                .body(EntityModel.of(mapper.toResource(pathContextBuilder, pi))))
+        ResponseEntity<EntityModel<ProjectResource>> result = projectInformation.map(pi -> ok()
+                .body(of(mapper.toResource(pathContextBuilder, pi))))
             .orElseGet(() -> notFound().build());
+
+        log.traceExit();
+        return result;
     }
 
     @Operation(summary = "Load screeningsheet values of requested project")
@@ -163,14 +179,17 @@ public class ProjectController {
     @GetMapping(value = PROJECT_SCREENINGSHEET, produces = {"application/hal+json"})
     public ResponseEntity<EntityModel<ScreeningSheetResource>> getScreeningSheet(
         @Parameter(description = "Project identifier") @PathVariable String project) {
+        log.traceEntry();
 
         PathContextBuilder pathContext = PathContext.builder()
             .project(project);
-        return projectServiceRepository.getScreeningSheet(project)
-            .map(screeningSheet -> ResponseEntity
-                .ok()
-                .body(EntityModel.of(mapper.toResource(pathContext, screeningSheet))))
+        ResponseEntity<EntityModel<ScreeningSheetResource>> result = projectServiceRepository.getScreeningSheet(project)
+            .map(screeningSheet -> ok()
+                .body(of(mapper.toResource(pathContext, screeningSheet))))
             .orElseGet(() -> notFound().build());
+
+        log.traceExit();
+        return result;
     }
 
     @Operation(summary = "Load screeningsheet file of requested project")
@@ -183,16 +202,19 @@ public class ProjectController {
     @ResponseBody
     public ResponseEntity<byte[]> getScreeningSheetFile(
         @Parameter(description = "Project identifier") @PathVariable String project) {
+        log.traceEntry();
 
-        return projectServiceRepository.getScreeningSheetFile(project)
-            .map(daten -> ResponseEntity
-                .ok()
+        ResponseEntity<byte[]> result = projectServiceRepository.getScreeningSheetFile(project)
+            .map(daten -> ok()
                 .header(CONTENT_DISPOSITION, ContentDisposition.builder("form-data").name("attachment").filename("screeningsheet.pdf").build().toString())
                 .header(ACCESS_CONTROL_EXPOSE_HEADERS, CONTENT_DISPOSITION)
                 .contentType(MediaType.APPLICATION_PDF)
                 .contentLength(daten.length)
                 .body(daten))
             .orElseGet(() -> notFound().build());
+
+        log.traceExit();
+        return result;
     }
 
     @Operation(summary = "Delete project")
@@ -207,9 +229,13 @@ public class ProjectController {
     @DeleteMapping(value = PROJECT, produces = {"application/hal+json"})
     public ResponseEntity<EntityModel<Void>> deleteProject(
         @Parameter(description = "Project identifier") @PathVariable String project) {
+        log.traceEntry();
 
         boolean deleted = projectService.deleteProject(project);
-        return ResponseEntity.status(deleted ? NO_CONTENT : BAD_REQUEST).build();
+        ResponseEntity<EntityModel<Void>> result = ResponseEntity.status(deleted ? NO_CONTENT : BAD_REQUEST).build();
+
+        log.traceExit();
+        return result;
     }
 
     @Operation(summary = "Create project copy")
@@ -226,12 +252,16 @@ public class ProjectController {
     public ResponseEntity<EntityModel<ProjectResource>> copyProject(
         @Parameter(description = "Project identifier") @PathVariable String project,
         @Parameter(description = "Raw data of screeningsheet") @RequestPart("datei") MultipartFile screeningSheet) throws IOException {
+        log.traceEntry();
 
-        return projectService.copyProject(project, screeningSheet.getBytes())
+        ResponseEntity<EntityModel<ProjectResource>> result = projectService.copyProject(project, screeningSheet.getBytes())
             .map(projektKopie -> ResponseEntity
                 .created(mapper.createLink(ResourceMapper.REL_SELF, linkToCurrentMapping().toString(), PROJECT, Map.of("project", projektKopie.getIdentifier())).toUri())
-                .body(EntityModel.of(mapper.toResource(PathContext.builder(), projektKopie))))
+                .body(of(mapper.toResource(PathContext.builder(), projektKopie))))
             .orElseGet(() -> notFound().build());
+
+        log.traceExit();
+        return result;
     }
 
 
@@ -245,23 +275,27 @@ public class ProjectController {
     public ResponseEntity<EntityModel<Void>> postTailoring(
         @Parameter(description = "Project identifier") @PathVariable String project,
         @RequestBody ProjectCreationRequest request) {
+        log.traceEntry();
 
-        Optional<Tailoring> result = projectService.addTailoring(project, request.getCatalog(), request.getScreeningSheet().getData(), request.getSelectionVector(), request.getNote());
-        if (result.isEmpty()) {
-            return notFound()
-                .build();
+        Optional<Tailoring> tailoring = projectService.addTailoring(project, request.getCatalog(), request.getScreeningSheet().getData(), request.getSelectionVector(), request.getNote());
+        if (tailoring.isEmpty()) {
+            log.traceExit();
+            return notFound().build();
         }
 
         PathContextBuilder pathContext = PathContext.builder()
             .project(project)
-            .tailoring(result.get().getName());
+            .tailoring(tailoring.get().getName());
 
-        return ResponseEntity
+        ResponseEntity<EntityModel<Void>> result = ResponseEntity
             .created(mapper.createLink(ResourceMapper.REL_SELF, linkToCurrentMapping().toString(),
                     TAILORING,
                     pathContext.build().parameter())
                 .toUri())
             .build();
+
+        log.traceExit();
+        return result;
     }
 
     @Operation(summary = "Load selection vector of project")
@@ -277,13 +311,42 @@ public class ProjectController {
     public ResponseEntity<EntityModel<SelectionVectorResource>> getSelectionVector(
         @Parameter(description = "fachlicher Projektschlüssel")
         @PathVariable("project") String project) {
+        log.traceEntry();
+
         PathContextBuilder pathContext = PathContext.builder()
             .project(project);
-        return projectServiceRepository.getProject(project)
-            .map(p -> ResponseEntity
-                .ok()
-                .body(EntityModel.of(mapper.toResource(pathContext, p.getScreeningSheet().getSelectionVector()))))
+        ResponseEntity<EntityModel<SelectionVectorResource>> result = projectServiceRepository.getProject(project)
+            .map(p -> ok()
+                .body(of(mapper.toResource(pathContext, p.getScreeningSheet().getSelectionVector()))))
             .orElseGet(() -> notFound().build());
+
+        log.traceExit();
+        return result;
     }
 
+    @Operation(summary = "Set state of project")
+    @ApiResponses(value = {
+        @ApiResponse(
+            responseCode = "200", description = "Upadtes project data",
+            content = @Content(mediaType = "application/json+hal", schema = @Schema(implementation = ProjectResource.class))),
+        @ApiResponse(
+            responseCode = "404", description = "Project does not exist",
+            content = @Content)
+    })
+    @PutMapping(value = PROJECT_STATE, produces = {"application/hal+json"})
+    public ResponseEntity<EntityModel<ProjectResource>> putState(
+        @Parameter(description = "Project identifier") @PathVariable String project,
+        @Parameter(description = "State to set") @PathVariable ProjectState state) {
+        log.traceEntry();
+
+        PathContextBuilder pathContext = PathContext.builder()
+            .project(project);
+        ResponseEntity<EntityModel<ProjectResource>> result = projectService.updateState(project, state)
+            .map(updatedProject -> ok()
+                .body(of(mapper.toResource(pathContext, updatedProject))))
+            .orElseGet(() -> notFound().build());
+
+        log.traceExit();
+        return result;
+    }
 }
